# cca-bocca

./: .ignore  CHANGES  Makefile.in  build.xml  configure.ac  genconfig
bocca-trunk/: BUGS  DEVELOPER  README  TODO  configure  configure.ac  proposed.LICENSE.bocca.txt  setup.py  varlist.in
bocca-trunk/boccalib/: .ignore  boccaversion.py  boccaversion.py.in
bocca-trunk/boccalib/builders/: builder.py  locations.py
bocca-trunk/boccalib/cct/: __init__.py  _component_callbacks.py  _debug.py  _err.py  _examples.py  _file.py  component.py  dispatcher.py  example.py  interface.py  package.py  port.py  project.py  sidlclass.py
bocca-trunk/boccalib/defaults/: Component  Interface  Package  Parameters  Port  Project  Provides
bocca-trunk/boccalib/graph/: _compat.py  boccagraph.py
bocca-trunk/boccalib/parse/: boccaParse.py
bocca-trunk/boccalib/splicers/: Data.py  ExtractData.py  Kills.py  Misc.py  Source.py  __init__.py  _compat.py
bocca-trunk/boccalib/writers/: README.writers.txt  __init__.py  cWriter_1_0.py  cxx_cioWriter.py  f77_31Writer.py  f90Writer.py  sourceWriter.py
bocca-trunk/config/: check_gmake.m4  check_java.m4  check_pythnonshell.m4  check_svn.m4  config_maketut.m4
bocca-trunk/doc/: bocca_feature_matrix.html  boccahelp.js  boccajscripts.js  stylesheet.css
bocca-trunk/doc/cruisecontrol/: README  cruisecontrol.sh
bocca-trunk/doc/docbocca-example/: Makefile  compilabletext.txt  docbocca.tex
bocca-trunk/doc/release/: process.html
bocca-trunk/doc/requirements/: commands.txt  gmake.txt  tabulated.txt
bocca-trunk/scripts/: bocca  bocca-demo-splicer  bocca-extract  copytestresults.sh  demo-writers  gendoc.py  resplice  splice-source-1.inp  splice-target-0.inp  splice-target-6.inp  svnignore
bocca-trunk/test/: .ignore  Makefile
bocca-trunk/test/cca/: test_bpF.sh  test_ppF.sh  test_z_harness.sh
bocca-trunk/test/cl/: Makefile.in  README  test_A_harness.sh  test_big_1.sh  test_change_port_1.sh  test_coinstall_1.sh  test_copy_class_2.sh  test_copy_class_3.sh  test_copy_enum_1.sh  test_copy_interface_1.sh  test_copy_port_1.sh  test_create_class_2.sh  test_create_class_3.sh  test_create_component_1.sh  test_create_component_3.sh  test_create_component_4.sh  test_create_component_6.sh  test_create_component_7.sh  test_create_component_8.sh  test_create_component_9.sh  test_create_enum.sh  test_create_interface_2.sh  test_create_package_1.sh  test_create_package_3.sh  test_create_port_3.sh  test_create_project_2.sh  test_extends_3.sh  test_external_2.sh  test_go_1.sh  test_go_c.sh  test_go_cxx.sh  test_go_f90.sh  test_go_python.sh  test_help_2.sh  test_help_3.sh  test_import_req_1.sh  test_import_req_2.sh  test_import_sidl_1.sh  test_merge_2.sh  test_remove_class_2.sh  (+9 more)
bocca-trunk/test/splicer/: ccafe1.StarterComponent.setServices.gen  ccafe1_StarterComponent_Impl.cxx.insert.sample  ccafe1_StarterComponent_Impl.cxx.overwrite.sample  ccafe1_StarterComponent_Impl.setServices.input  ccaffeine_TypeMap_Impl.cxx.splice.sample  ccaffeine_TypeMap_Impl.hxx.splice.sample  source1.input  source1.test  splices2
boccalib/: acboccavars.py.in  boccaversion.py  fileutil.py
boccalib/cct/: _cores.py  _modulePath.py  _nametab.py  _paramdesc.py  _portInstance.py  _sidlgen.py  _typedmap.py  _util.py  _validate.py  enum.py  help.py  sidlclass.py
boccalib/defaults/: Application  Class  Subdir  Uses  vars.system
boccalib/parse/itools/: ParameterAccessMode.py  README  commenttab.py  iparse.py
boccalib/splicers/: Block.py  Data.py  ExtractData.py  Kills.py  Line.py  Operations.py  Source.py
boccalib/templates/: project.defaults.in
boccalib/templates/gmake/: .ignore  Makefile  README  configure.ac  make.project.in
boccalib/templates/gmake/buildutils/: fakedepl.sh  getLanguages.sh  getNumCores.sh  make.client  make.client.toplevel  make.vars.common.in
boccalib/templates/gmake/python/: locations.py
boccalib/templates/gmake/utils/: __tcejorp__-config.in  bocca-gui-backend.sh.in  config-data.in
boccalib/writers/: __init__.py  boccaWriterFactory.py  cWriter.py  cxxWriter.py  f03Writer.py  f77Writer.py  javaWriter.py  pythonWriter.py
config/: check_babelconfig.m4  check_ccabundletag.m4  check_ccafeconfig.m4  check_ccaspecbabelconfig.m4  subst_dependency_vars.m4
config/old/: acsite.m4
doc/: compilabletext.txt  gen_bocca_feature_matrix.py
doc/cruisecontrol/: bocca-cruisecontrol.xml  config.xml
doc/release/: process.0.4.2.txt
doc/requirements/: diff.txt  multiuser.txt  versioncontrol.txt
scripts/: Makefile  bocca-merge  cct  clide  splice-source-0.inp  splice-source-3.inp  splice-source-4.inp  splice-source-5.inp  splice-target-1.inp  splice-target-5.inp
test/: .cvsignore
test-dispatch/: README  clide
test/cca/: Makefile.in  README  test_A_harness.sh  test_pp.sh
test/cl/: .ignore  test_change_class_1.sh  test_change_class_2.sh  test_change_class_3.sh  test_change_class_4.sh  test_change_enum_1.sh  test_change_interface_1.sh  test_change_project_1.sh  test_copy_class_1.sh  test_copy_class_4.sh  test_copy_component_1.sh  test_copy_component_2.sh  test_copy_component_3.sh  test_copy_component_4.sh  test_copy_interface_2.sh  test_copy_port_2.sh  test_create_class_1.sh  test_create_component_10.sh  test_create_component_11.sh  test_create_component_2.sh  test_create_component_5.sh  test_create_interface_1.sh  test_create_package_2.sh  test_create_port_1.sh  test_create_port_2.sh  test_create_port_4.sh  test_create_project_1.sh  test_depl.sh  test_extends_1.sh  test_extends_2.sh  test_extends_4.sh  test_external_1.sh  test_go_java.sh  test_help_1.sh  test_import_req_3.sh  test_import_sidl_2.sh  test_import_sidl_3.sh  test_install_1.sh  test_merge_1.sh  test_merge_3.sh  (+11 more)
test/ctor/: dyn.cxx  static.cxx.in
test/splicer/: Makefile  Makefile.baa  ccaffeine_TypeMap_Impl.cxx.splice.misc.sample  ccaffeine_TypeMap_Impl.cxx.splice.signatures.sample  ccaffeine_TypeMap_Impl.hxx.splice.misc.sample  ccaffeine_TypeMap_Impl.hxx.splice.signatures.sample  decaf.CrasherComponent.setServices.gen  extract.tar  source2.input  source2.test  splices1
test/writers/: Makefile
(+133 files in other folders)
